== 3.0.0.alpha.11
* Bug fixes

== 3.0.0.alpha.10
* ActiveRel support, see Wiki pages (chris #393)

== 3.0.0.alpha.9
* Complete rewrite of the query api, see wiki page (#406, chris, brian)
* Performance improvements (#382,#400, #402, chris)
* idproperty - user defined primary keys (#396,#389)
* Reimplementation of Neo4j::Config
* Serialization of node properties (#381)
* Better first,last syntax (#379)

== 3.0.0.alpha.8
* Integration with new Query API from neo4j-core including:
* - .query_as and #query_as methods to get queries from models (#366)
* - .qq method for QuickQuery syntax ( https://github.com/andreasronge/neo4j/wiki/Neo4j-v3#quickquery-work-in-progress / #366)
* Before and after callbacks on associations (#373)
* .find / .all / .count changed to be more like ActiveRecord
* .first / .last methods (#378)
* .find_by / .find_by! (#375)

== 3.0.0.alpha.7
* Bug fix uniqueness-validator (#356 from JohnKellyFerguson)
* Many improvements, like update_attributes and validation while impl orm_adapter, Brian Underwood
* Impl orm_adapter API for neo4j so it can be used from for example devise, Brian Underwood (#355)
* Fix of inheritance of Neo4j::ActiveNode (#307)
* Expose add_label, and remove_label (#335)
* Fixed auto loading of classes bug, (#349)
* Bumped neo4j-core, 3.0.0.alpha.16

== 3.0.0.alpha.6
* Support for Heroku URLs, see wiki https://github.com/andreasronge/neo4j/wiki/Neo4j-v3 (#334)

== 3.0.0.alpha.5
* Added allow session options via 'config.neo4j.session_options' so it can run on heroku (#333)
* Relaxed Dependencies for Rails 4.1 (#332)
* Using neo4j-core version 3.0.0.alpha.12

== 3.0.0.alpha.4
* Implemented validates_uniqueness_of (#311)
* Using neo4j-core version 3.0.0.alpha.11

== 3.0.0.alpha.3
* Support for rails scaffolds
* Support for created_at and updated_at (#305)
* Support for ability to select a session to use per model (#299)
* BugFix: updating a model should not clear out old properties (#296)

== 3.0.0.alpha.2